--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -31,9 +31,10 @@ body,
 }
 
 $lip: 64px;
+$duration: 0.3s;
 
 .pusher {
-    transition: all 0.5s;
+    transition: all $duration;
     perspective: 1200px;
 
     &.is-pushed {
@@ -53,7 +54,7 @@ $lip: 64px;
     padding-right: $lip;
 
     transform: translateX(-100%) translateX($lip);
-    transition: all 0.5s;
+    transition: all $duration;
 
     .scroller {
         background: orange;
@@ -77,14 +78,14 @@ $lip: 64px;
 
         background: rgba(0, 0, 0, 0.5);
 
-        transition: opacity 0.5s,
-                    visibility 0 linear 0.5s;
+        transition: opacity $duration,
+                    visibility 0 linear $duration;
 
         .is-pushed & {
             visibility: visible;
             opacity: 1;
 
-            transition: opacity 0.5s,
+            transition: opacity $duration,
                         visibility 0 linear;
 
         }
@@ -94,7 +95,7 @@ $lip: 64px;
 .main {
     background: green;
     transform-origin: top left;
-    transition: all 0.5s;
+    transition: all $duration;
 
     .is-pushed & {
         // transform: rotateY(45deg);
