--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,176 +3,174 @@ $duration: 0.3s;
 $break: 1024px;
 
 @mixin from-breakpoint($mark: $break) {
-    @media (min-width: $mark) {
-        @content;
-    }
+  @media (min-width: $mark) {
+    @content;
+  }
 }
 
 @mixin up-to-breakpoint($mark: $break) {
-    @media (max-width: $mark) {
-        @content;
-    }
+  @media (max-width: $mark) {
+    @content;
+  }
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 html,
 body,
-.container,
-.scroller,
+.canvas,
+.inner,
 .pusher {
-    height: 100%;
+  height: 100%;
 }
 
-.scroller {
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
+.inner {
+  position: relative;
 }
 
-.scroller,
-.scroller-content {
-    position: relative;
-}
+.canvas {
+  position: relative;
 
-.container {
-    position: relative;
+  background: #34495e;
+
+  perspective: 1200px;
+  transform-style: preserve3d;
+
+  @include up-to-breakpoint {
     overflow: hidden;
-
-    background: #34495e;
-
-    perspective: 1200px;
-    transform-style: preserve3d;
+  }
 }
 
 .pusher {
-    transition: all $duration;
-    perspective: 1200px;
+  transition: all $duration;
+  perspective: 1200px;
 
-    @include up-to-breakpoint($break) {
-        &.is-pushed.fold-back {
-            transform: translateX(100%) translateX(-($lip));
-        }
+  @include up-to-breakpoint($break) {
+    &.is-pushed.fold-back {
+      transform: translateX(100%) translateX(-($lip));
     }
+  }
 }
 
-.filter-panel {
-    box-sizing: border-box;
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    padding-right: $lip;
+.navbar {
+  position: fixed;
+  // position: -webkit-sticky;
 
-    @include up-to-breakpoint($break) {
-        transform: translateX(-100%) translateX($lip);
-        transition: all $duration;
-    }
+  z-index: 1;
+  height: 32px;
+  top: 0;
+  left: 0;
+  width: 100%;
 
-    @include from-breakpoint($break) {
-        right: auto;
-        width: 300px;
-        padding-right: 0;
-        padding-top: 32px;
-    }
+  line-height: 32px;
 
-    .scroller {
-        background: orange;
-    }
-
-    @include up-to-breakpoint($break) {
-        .is-pushed.drop-back & {
-            transform: translateX(0);
-        }
-
-        &:after {
-            content: '';
-
-            position: absolute;
-            visibility: hidden;
-            z-index: -1;
-            top: 0;
-            right: -100%;
-            bottom: 0;
-            left: 0;
-            opacity: 0;
-
-            background: rgba(0, 0, 0, 0.5);
-
-            transition: opacity $duration,
-                        visibility 0 linear $duration;
-
-            .is-pushed & {
-                visibility: visible;
-                opacity: 1;
-
-                transition: opacity $duration,
-                            visibility 0 linear;
-
-            }
-        }
-    }
+  background: darkgray;
 }
 
 .main {
-    background: green;
-    transform-origin: top left;
+  position: relative;
+
+  background: green;
+
+  @include up-to-breakpoint($break) {
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+
+    .is-pushed.fold-back & {
+      transform: rotateY(45deg);
+    }
+
+    .drop-back & {
+      transition: all $duration;
+      transform-origin: top right;
+      animation-fill-mode: forwards;
+    }
+
+    .is-pushed.drop-back & {
+      // animation: drop-back ($duration * 3) / 2;
+      transform: translateZ(-100px);
+    }
+  }
+
+  @include from-breakpoint($break) {
+    margin-left: 300px;
+    background: yellow;
+  }
+}
+
+.aside {
+  box-sizing: border-box;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding-right: $lip;
+
+  background: orange;
+
+  @include up-to-breakpoint($break) {
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+
+    transform: translateX(-100%) translateX($lip);
     transition: all $duration;
+  }
 
-    .scroller-content {
-        padding-top: 32px;
+  @include from-breakpoint($break) {
+    right: auto;
+    width: 300px;
+    padding-right: 0;
+    padding-top: 32px;
+  }
+
+  @include up-to-breakpoint($break) {
+    .is-pushed.drop-back & {
+      transform: translateX(0);
     }
 
-    @include up-to-breakpoint($break) {
-        .is-pushed.fold-back & {
-            transform: rotateY(45deg);
-        }
+    &:after {
+      content: '';
 
-        .drop-back & {
-            transform-origin: top right;
-            animation-fill-mode: forwards;
-        }
+      position: absolute;
+      visibility: hidden;
+      z-index: -1;
+      top: 0;
+      right: -100%;
+      bottom: 0;
+      left: 0;
+      opacity: 0;
 
-        .is-pushed.drop-back & {
-            // animation: drop-back ($duration * 3) / 2;
-            transform: translateZ(-100px);
-        }
+      background: rgba(0, 0, 0, 0.5);
+
+      transition: opacity $duration,
+                  visibility 0 linear $duration;
+
+      .is-pushed & {
+        visibility: visible;
+        opacity: 1;
+
+        transition: opacity $duration,
+                    visibility 0 linear;
+
+      }
     }
-
-    @include from-breakpoint($break) {
-        margin-left: 300px;
-        background: yellow;
-    }
+  }
 }
 
 @keyframes drop-back {
-    0% {
-        transform: translateZ(0) rotateY(0);
-    }
+  0% {
+    transform: translateZ(0) rotateY(0);
+  }
 
-    50% {
-        transform: translateZ(0) rotateY(-10deg);
-    }
+  50% {
+    transform: translateZ(0) rotateY(-10deg);
+  }
 
-    100% {
-        transform: translateZ(-100px) rotateY(0deg);;
-    }
-}
-
-.fixed {
-    position: fixed;
-    // position: -webkit-sticky;
-
-    z-index: 1;
-    height: 32px;
-    top: 0;
-    left: 0;
-    width: 100%;
-
-    line-height: 32px;
-
-    background: darkgray;
+  100% {
+    transform: translateZ(-100px) rotateY(0deg);;
+  }
 }
