--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -23,7 +23,6 @@ body {
 html,
 body,
 .canvas,
-.inner,
 .pusher {
   height: 100%;
 }
@@ -38,9 +37,6 @@ body,
 
   background: #34495e;
 
-  perspective: 1200px;
-  transform-style: preserve3d;
-
   @include up-to-breakpoint {
     overflow: hidden;
   }
@@ -49,6 +45,7 @@ body,
 .pusher {
   transition: all $duration;
   perspective: 1200px;
+  transform-style: preserve3d;
 
   @include up-to-breakpoint {
     &.is-pushed.fold-back {
@@ -119,7 +116,8 @@ body,
 
   @include up-to-breakpoint {
     overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
+    // -webkit-overflow-scrolling: touch;
+    height: 100%;
 
     transform: translateX(-100%);
     transition: all $duration;
@@ -128,7 +126,7 @@ body,
       transform: translateX(0);
     }
 
-    &:after {
+    &:after- {
       content: '';
 
       position: absolute;
