--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,7 +8,7 @@ $navbar-height: 48px;
     @content;
   }
 
-  .no-mediaqueries & {
+  .lt-ie9 & {
     @content;
   }
 }
@@ -134,6 +134,7 @@ body,
 
   @include up-to-breakpoint {
     height: 100%;
+    width: 100%;
 
     transform: translateX(-100%);
     transition: all $duration;
@@ -142,16 +143,16 @@ body,
       transform: translateX(0);
     }
 
-    &:after- {
+    &:after {
       content: '';
 
       position: absolute;
       visibility: hidden;
       z-index: -1;
       top: 0;
-      right: -100%;
+      // right: -100%;
       bottom: 0;
-      left: 0;
+      left: 100%;
       opacity: 0;
 
       background: rgba(0, 0, 0, 0.5);
